<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_edit_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mybudget.MainActivity"
    android:orientation="vertical">



    <LinearLayout
        android:id="@+id/linearlayout_edit_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <!--<Button-->
            <!--android:id="@+id/button_delete_expense"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:drawableTop="@drawable/ic_delete_white_24dp"-->
            <!--android:background="@drawable/circle_button"-->
            <!--android:textColor="@color/white"-->
            <!--android:layout_marginTop="@dimen/button_veritcal_margin"-->
            <!--android:onClick="DeleteExpense"-->
            <!--android:gravity="center_vertical" />-->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_delete_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/history_expense_vertical_margin"
            android:contentDescription="@string/action_add_expense"
            app:backgroundTint="@color/color_delete"
            app:srcCompat="@drawable/ic_delete_white_24dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edit_expense"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/history_expense_vertical_margin"
            android:hint="@string/hint_edit_expense"
            android:gravity="center_horizontal"
            android:textSize="@dimen/expense_text_size"/>



        <!--android:layout_below="@+id/edit_expense"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:text="Add"-->
        <!--android:background="@color/colorAccent"-->
        <!---->

    </LinearLayout>

    <Button
        android:id="@+id/button_confirm_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:text="@string/done"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:layout_marginTop="@dimen/button_veritcal_margin"
        android:onClick="ConfirmExpense"
        android:layout_below="@+id/linearlayout_edit_expense"
        android:padding="@dimen/activity_default_padding"/>



</RelativeLayout>
